Prepare v0.7.7 JVM configuration